src/objects/Document_Link__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Document Links</relationshipLabel>
        <relationshipName>Document_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Category__c</fullName>
        <label>Document Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collection</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Move Out</fullName>
                </value>
                <value>
                    <fullName>Placement</fullName>
                </value>
                <value>
                    <fullName>Security Deposit</fullName>
                </value>
                <value>
                    <fullName>Temporary Housing Confirmation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Credit Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <label>Document Link</label>
        <type>Url</type>
    </fields>
    <label>Document Link</label>
    <nameField>
        <displayFormat>DOC-{0000000}</displayFormat>
        <label>Document Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Links</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>